# seqr

./: Cargo.toml  README.md  mk-outs.sh
src/: lib.rs  main.rs
tests/: cli.rs
tests/inputs/: dfam.fa  one.fa
tests/outputs/: dfam.alu.fa  dfam.alu.fq  dfam.alu.insensitive.fa
